# task-mesh

./: .env.example  .env.local  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  prisma.config.ts  tsconfig.tsbuildinfo  vercel.json
app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  template.tsx
components/: activity-feed.tsx  activity-timeline.tsx  agent-card.tsx  agent-status-badge.tsx  app-shell.tsx  confidence-meter.tsx  detector-reason-list.tsx  edge-delta-badge.tsx  empty-state-panel.tsx  evidence-card.tsx  evidence-list.tsx  evidence-timeline.tsx  live-monitor.tsx  live-status-bar.tsx  live-value.tsx  loading-skeletons.tsx  market-card.tsx  market-table.tsx  mini-sparkline.tsx  opportunity-card.tsx  roadmap-card.tsx  run-analysis-button.tsx  scan-state-badge.tsx  scanner-surface.tsx  settlement-status-badge.tsx  sidebar-nav.tsx  signal-card.tsx  site-footer.tsx  status-badge.tsx  system-health-panel.tsx  task-card.tsx  task-status-badge.tsx  task-workspace.tsx  top-command-bar.tsx
contracts/: Cargo.toml  README.md
contracts/agent_account/: Cargo.toml
contracts/agent_account/src/: lib.rs
contracts/agent_account/test_snapshots/test/: allows_contract_and_allowlisted_transfer.1.json  rejects_daily_cap_exhaustion.1.json  rejects_unauthorized_recipient.1.json
contracts/bounty_board/: Cargo.toml  README.md  testnet-deploy-checklist.md
contracts/bounty_board/src/: lib.rs
contracts/bounty_board/test_snapshots/test/: cancel_refunds_open_bounty.1.json  full_lifecycle_locks_and_pays_escrow.1.json
docs/: demo-script.md  (+1 more)
(+71 files in other folders)
